# libtermcolors

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  libtermcolors.3  libtermcolors.pc.in  metadata.json
.github/workflows/: tests.yml
src/: App.tsx  Makefile.am  libtermcolors.3  termcolors.c  termcolors.h
tests/: Makefile.am  example.c  test_termcolors.c
